kubernetes/base/network-policy/allow-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-nginx-ingress
  namespace: liora-dev

spec:
  podSelector:
    matchLabels:
      app: nginx-deployment

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 80
