kubernetes/base/network-policy/allow-nginx-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-nginx-to-wordpress
  namespace: liora-dev

spec:
  podSelector:
    matchLabels:
      app: wordpress-app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-deployment

      ports:
        - protocol: TCP
          port: 80
