kubernetes/base/network-policy/allow-wordpress-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-wordpress-to-wordpress-db
  namespace: liora-dev


spec:
  podSelector:
    matchLabels:
      app: wordpress-db
  
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wordpress-app
      
      ports:
        - protocol: TCP
          port: 3306
